<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/inputAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="Address"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Connect" />

    <TextView
        android:id="@+id/textSentMessages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sent messages: 0"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textReceivedMessages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Received messages: 0"
        android:textAlignment="center" />


</LinearLayout>

